[gd_scene load_steps=30 format=3 uid="uid://b6bunf0lbfsio"]

[ext_resource type="Script" path="res://scripts/Bomber.gd" id="1_fyw3t"]
[ext_resource type="Texture2D" uid="uid://c2gwvubtceobn" path="res://sprites/Parasite-2_explode.png" id="2_yt68g"]
[ext_resource type="Texture2D" uid="uid://k1066olpoa81" path="res://sprites/Parasite-2.png" id="3_ucgmw"]
[ext_resource type="Texture2D" uid="uid://ddpfvmcyi7dtg" path="res://sprites/Parasite-2_dead.png" id="4_mhai8"]
[ext_resource type="AudioStream" uid="uid://ccrgu2o6vkpfj" path="res://audio/combat-bloody-splat-epic-stock-media-3-3-00-00.mp3" id="5_k4j3w"]
[ext_resource type="PackedScene" uid="uid://clmb8ub4x11mc" path="res://scenes/explosion.tscn" id="6_t5mah"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3j5hj"]
atlas = ExtResource("2_yt68g")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qye0a"]
atlas = ExtResource("2_yt68g")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_losvj"]
atlas = ExtResource("2_yt68g")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_aus8r"]
atlas = ExtResource("2_yt68g")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6qhpm"]
atlas = ExtResource("2_yt68g")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_24h0t"]
atlas = ExtResource("2_yt68g")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8lyk3"]
atlas = ExtResource("2_yt68g")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_id258"]
atlas = ExtResource("2_yt68g")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gtej8"]
atlas = ExtResource("2_yt68g")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_d1pv3"]
atlas = ExtResource("2_yt68g")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_t5oao"]
atlas = ExtResource("2_yt68g")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7j0dh"]
atlas = ExtResource("2_yt68g")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_08qol"]
atlas = ExtResource("3_ucgmw")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0qxld"]
atlas = ExtResource("3_ucgmw")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_axfgl"]
atlas = ExtResource("3_ucgmw")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xqbbn"]
atlas = ExtResource("3_ucgmw")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_eahi1"]
atlas = ExtResource("3_ucgmw")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kj4sb"]
atlas = ExtResource("3_ucgmw")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kmiev"]
atlas = ExtResource("4_mhai8")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_vqon3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3j5hj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qye0a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_losvj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aus8r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6qhpm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_24h0t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8lyk3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_id258")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gtej8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d1pv3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t5oao")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7j0dh")
}],
"loop": false,
"name": &"Explode",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_08qol")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0qxld")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_axfgl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xqbbn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eahi1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kj4sb")
}],
"loop": true,
"name": &"Move",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kmiev")
}],
"loop": true,
"name": &"dead",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4nv1e"]
size = Vector2(73, 72)

[sub_resource type="CircleShape2D" id="CircleShape2D_5vmfg"]
radius = 201.01

[sub_resource type="RectangleShape2D" id="RectangleShape2D_48kpp"]
size = Vector2(109, 111.5)

[node name="Parasite-2" type="CharacterBody2D"]
z_index = 1
collision_layer = 2
script = ExtResource("1_fyw3t")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(4.5, 4.5)
sprite_frames = SubResource("SpriteFrames_vqon3")
animation = &"Explode"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_4nv1e")

[node name="Parasite-Hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Parasite-Hitbox"]
shape = SubResource("CircleShape2D_5vmfg")

[node name="Entrance_timer" type="Timer" parent="."]
wait_time = 0.7
autostart = true

[node name="Explode_timer" type="Timer" parent="."]
wait_time = 1.5

[node name="Death_timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Enemy_death" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_k4j3w")
volume_db = -20.0

[node name="explosion" parent="." instance=ExtResource("6_t5mah")]

[node name="Parasite-Hurtbox" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Parasite-Hurtbox"]
visible = false
shape = SubResource("RectangleShape2D_48kpp")

[connection signal="body_entered" from="Parasite-Hitbox" to="." method="_on_parasite_hitbox_body_entered"]
[connection signal="timeout" from="Entrance_timer" to="." method="_on_entrance_timer_timeout"]
[connection signal="timeout" from="Explode_timer" to="." method="_on_explode_timer_timeout"]
[connection signal="timeout" from="Death_timer" to="." method="_on_death_timer_timeout"]
